# sigmacode

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.server  README.md  docker-compose.server.yml  install.sh
crates/sigmacode-cli/: Cargo.toml
crates/sigmacode-cli/src/: keys.rs  main.rs  server.rs
crates/sigmacode-core/: Cargo.toml
crates/sigmacode-core/src/: error.rs  key_store.rs  lib.rs  tests.rs  types.rs
crates/sigmacode-core/src/agent/: analyzer.rs  critic.rs  engine.rs  executor.rs  graph_engine.rs  memory.rs  mod.rs  orchestrator.rs  planner.rs  reviewer.rs  verifier.rs
crates/sigmacode-core/src/context/: mod.rs
crates/sigmacode-core/src/llm/: mod.rs
crates/sigmacode-core/src/rate_limit/: mod.rs
crates/sigmacode-core/src/security/: mod.rs
crates/sigmacode-core/src/tools/: bash.rs  edit_file.rs  glob.rs  grep.rs  mod.rs  read_file.rs  write_file.rs
crates/sigmacode-retrieval/: Cargo.toml
crates/sigmacode-retrieval/src/: lib.rs
crates/sigmacode-sandbox/: Cargo.toml
crates/sigmacode-sandbox/src/: lib.rs
crates/sigmacode-tui/: Cargo.toml
crates/sigmacode-tui/src/: app.rs  highlight.rs  main.rs
crates/sigmacode-tui/src/ui/: mod.rs
skills/: frontend.md
