[workspace]
resolver = "2"
members = [
    "crates/sigmacode-core",
    "crates/sigmacode-tui",
    "crates/sigmacode-cli",
    "crates/sigmacode-retrieval",
    "crates/sigmacode-sandbox",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/sigmacode/sigmacode"
description = "A modern agentic AI coding assistant built in Rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
pin-project-lite = "0.2"
tokio-util = { version = "0.7", features = ["rt"] }
dotenvy = "0.15"
serde_yaml = "0.9"
syntect = { version = "5", features = ["default-fancy"], default-features = false }
graph-flow = { version = "0.5", features = ["rig"] }
rig-core = "0.38"

sigmacode-core = { path = "crates/sigmacode-core" }
sigmacode-retrieval = { path = "crates/sigmacode-retrieval" }
sigmacode-sandbox = { path = "crates/sigmacode-sandbox" }
sigmacode-tui = { path = "crates/sigmacode-tui" }
sigmacode-cli = { path = "crates/sigmacode-cli" }
