[package]
name = "sigmacode-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent engine for SigmaCode"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true
futures.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
dirs.workspace = true
chrono.workspace = true
pin-project-lite.workspace = true
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
graph-flow.workspace = true
rig-core.workspace = true

[dev-dependencies]
tempfile = "3"
